2014-11-07  Daiki Ueno  <ueno@gnu.org>

	* epg.el (epg--list-keys-1): Ignore fields after the 15th field
	(bug#18979).  Reported by Hideki Saito.

2014-11-06  Daiki Ueno  <ueno@gnu.org>

	* emacs-lisp/package.el (package--display-verify-error): New function.
	(package--check-signature): Use it to display output sent to stderr.

2014-11-06  Stefan Monnier  <monnier@iro.umontreal.ca>

	* subr.el (pop): Don't call the getter twice (bug#18968).

	* emacs-lisp/macroexp.el (macroexp--expand-all): Optimize away trivial
	uses of `funcall'.

2014-11-06  Daiki Ueno  <ueno@gnu.org>

	* epa.el (epa-error-buffer): New variable.
	(epa-display-error): New function.
	(epa-decrypt-file, epa-verify-file, epa-verify-region)
	(epa-delete-keys, epa-import-keys): Display output sent to stderr.
	(epa-sign-file, epa-sign-region, epa-encrypt-region)
	(epa-export-keys, epa-insert-keys): Display output sent to stderr.
	Use setf instead of epg-context-set-*.
	* epa-file.el (epa-file-insert-file-contents):
	Use epa-display-error instead of epa-display-info.  Mimic the behavior
	of jka-compr when decryption program is not found.
	(epa-file-write-region): Use epa-display-error instead of
	epa-display-info.

2014-11-05  Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc/vc.el (vc-region-history): New command.
	(vc-print-log-internal): Use cl-some.

	* vc/vc-git.el (vc-git-region-history): New function.
	(vc-git-region-history-mode-map)
	(vc-git--log-view-long-font-lock-keywords)
	(vc-git-region-history-font-lock-keywords): New vars.
	(vc-git-region-history-font-lock): New function.
	(vc-git-region-history-mode): New major mode.

2014-11-05  Tassilo Horn  <tsdh@gnu.org>

	* net/eww.el (subr-x): Require subr-x at compile-time because eww
	uses string-trim.

2014-11-05  Daiki Ueno  <ueno@gnu.org>

	* epg.el (epg-context): Add new slot ERROR-OUTPUT.
	(epg-error-output): New buffer-local variable.
	(epg--start): Initialize epg-error-output.
	(epg--process-filter): Record output lines sent to stderr, in